# DM_simulation

./: .editorconfig  .env  .gitattributes  .gitignore  .tmp_ast_check.py  .tmp_check_dm.py  .tmp_check_resolve.py  .tmp_check_try.py  .tmp_count_try_except.py  .tmp_import_dm.py  .tmp_inspect_draw.py  .tmp_print_lines.py  .tmp_print_lines2.py  .tmp_print_lines3.py  .tmp_print_lines4.py  .tmp_print_lines5.py  .tmp_repro_draw.py  .tmp_repro_logic.py  .tmp_repro_wrapper.py  .venv_build_and_run.cmd  AGENTS.md  AI_EVALUATION_REPORT.html  ANALYSIS_MANA_CHARGE.md  APPLICATION_FLOW_QUICK_REFERENCE.md  CARD_EDITOR_REFACTOR_TDD_PLAN.md  CAST_SPELL_REPLACE_CARD_MOVE_IMPLEMENTATION.md  CHANGES_KEYWORD_PERSISTENCE.md  CMakeLists.txt  CONSISTENCY_CHECK_REPORT.md  CONSISTENCY_CHECK_REPORT_2026-03-22.md  CPP_MIGRATION_ASSESSMENT.md  CRITICAL_REMAINING_TASKS_TDD.md  DESIGN_PHASE_AWARE_AI.cpp  DESIGN_PHASE_AWARE_AI.hpp  DETAILED_FILE_MAPPING.md  DETAILED_SETUP_TEST_DUEL.md  DM_AI_Master_Spec_Final.md  DM_AI_Master_Spec_Final_v2.md  DartConfiguration.tcl  FIX_IMPLEMENTATION_REPORT.md  (+341 more)
.Jules/: palette.md
.github/: copilot-instructions.md
.mypy_cache/: missing_stubs
.scripts/: find_hang.py
PyQt6/: __init__.pyi
PyQt6_stub/: __init__.py
archive/: 99_Completed_Tasks_Archive_old.md  ci_log.txt  ci_log_2.txt  ci_log_success.txt  cleanup_log_20251223.txt  find_actions_report.txt  migrate_static_abilities.py  test_card_creation_integration.py  test_card_editor_logic.py  test_cost_modifier.py  test_cpp_collector.py  test_engine_spells_triggers.py  test_new_effects.py  test_revolution_json.py  test_scenario_runner.py  test_shield_trigger.py  test_stack_zone.py  test_stats_bindings.py  train.py  verify_output_20251202.txt
build-msvc/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
build-ninja/: .ninja_deps  .ninja_log  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  dm_ai_module.exp
build_ci_test/: CMakeCache.txt
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mingw_onnx/: CMakeCache.txt  Makefile  cmake_install.cmake
build_msvc/: CMakeCache.txt
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DM_AI_Simulator.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dm_ai_module.vcxproj  dm_ai_module.vcxproj.filters  dm_core.vcxproj  dm_core.vcxproj.filters
build_vs_nmake/: CMakeCache.txt  Makefile  cmake_install.cmake  dm_ai_module.exp
cmake/: toolchain_mingw.cmake
config/: secrets.json  train_config.yaml
data/: card_effects.json  card_stats.json  card_stats.json.migrated  card_stats_collected.json.migrated  cards.csv  cards.json  cards.json.migrated  editor_templates.json  expected_registered_commands.json  expected_registered_commands.json.migrated  meta_decks.json  ninja_test.json  scenarios.json  scenarios.json.migrated  sim_settings.json  synergy_pairs_v1.json  synergy_pairs_v1.json.migrated  test_cards.json  test_cards_verify.csv  test_keywords.json  test_query_card.json  test_usage_label.json
debug_scripts/: print_attack_commands.py  repro_card13.py
dm_ai_module/: __init__.py
dm_toolkit/: __init__.py  action_mapper.py  action_to_command.py  batch_simulation.py  cli.py  command_builders.py  commands.py  commands.py.bak  commands_new.py  commands_v2.py  compat_wrappers.py  consts.py  dm_ai_module.cp312-win_amd64.pyd.bak  dm_ai_module.py  dm_types.py  effect_tracer.py  event_dispatcher.py  event_types.py  native_event_bridge.py  payment.py  stat_keys.py  types.py  unified_execution.py  unified_execution_v2.py
docs/: 01_Game_Engine_Specs.md  01_System_Architecture_Overview_JP.md  02_AI_System_Specs.md  02_System_Architecture.md  03_Card_Editor_Specs.md  05_AI_ML_Specs.md  06_Meta_Game_Evolution.md  08_Cpp_Integration.md  10_Development_Status_and_Roadmap.md  11_Detailed_Implementation_Steps.md  13_POMDP_Inference_Spec.md  14_Meta_Game_Curriculum_Spec.md  15_Result_Stats_Spec.md  16_Scenario_Training_Spec.md  17_Detailed_Implementation_Instructions_for_AI.md  18_Feasibility_Analysis.md  20_Revised_Roadmap.md  AGENTS.md  BUILD_WINDOWS.md  CARD_EDITOR_AND_ENGINE_STAT_GAP_REPORT_2026-03-19.md  CARD_MOVEMENT_OUTPUT.md  CAST_SPELL_REPLACE_CARD_MOVE_IMPLEMENTATION.md  Current_Game_Rules_Implementation.md  DEVELOPMENT_WORKFLOW.md  DISCARD_OUTPUT.md  DM_AI_Master_Spec_Final.md  DM_Official_Rules.md  GUI_HEADLESS_TESTING_SETUP.md  GUI_VARIABLE_LINK_FIX.md  INDEX.md  MEGA_LAST_BURST_IMPLEMENTATION.md  MIGRATION_GUIDE_ACTION_TO_COMMAND.md  MSVC_PATH.md  ONNXRUNTIME_CI_POLICY.md  ORT_VERSION_POLICY.md  POMDP_Implementation_Plan.md  PR_SUMMARY_CARD_EDITOR_REFACTOR.md  README.md  REPLACE_CARD_MOVE_USAGE.md  REPO_LFS_MIGRATION_NOTICE.md  (+22 more)
dumps/: tmp.json
gui/: app.py  card_editor.py  deck_builder.py
i18n/: extracted.pot
legacy_tests/: verify_atomic_versatility.py  verify_continuous_recalc.py  verify_deck_inference.py  verify_lethal_puzzle.py  verify_select_option.py  verify_transformer_arch.py  verify_trigger_system.py
migration/: action_refs.txt  action_refs_cpp.txt
models/: README.md  best.onnx  cleanup_config.json  duel_transformer_20260123_011509.onnx  duel_transformer_20260123_023123.onnx  duel_transformer_20260123_023123.onnx.json  duel_transformer_20260123_023237.onnx  duel_transformer_20260123_023328.onnx  duel_transformer_20260123_023502.onnx  duel_transformer_20260123_023624.onnx  duel_transformer_20260123_023804.onnx  duel_transformer_20260123_024002.onnx  duel_transformer_20260123_025533.onnx  duel_transformer_20260123_025916.onnx  duel_transformer_20260123_025935.onnx  duel_transformer_20260123_030314.onnx  duel_transformer_20260123_030348.onnx  (+13 more)
native_prototypes/index_to_command/: CMakeLists.txt  README.md  command_encoder.py  index_to_command.py  test_command_encoder.py  test_command_encoder_parity.py  test_index_to_command.py  test_parity_full.py  test_parity_index_to_command.py
native_prototypes/index_to_command/src/: command_encoder.cpp  index_to_command.cpp
py_ai/: train.py
(+6811 files in other folders)
