[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dm_toolkit"
version = "0.1.0"
description = "Duel Masters AI Toolkit"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    # 再発防止: CMake の ONNX Runtime (1.20.1) と同一バージョンを固定して DLL/API 不整合を防ぐ。
    "onnxruntime==1.20.1",
    # 再発防止: PyQt6 はヘッドレス環境・CI/Docker では不要なため [gui] extras に移動。
    # GUI 環境でのインストール: pip install -e ".[gui]"
]

[project.optional-dependencies]
gui = [
    "PyQt6",
]
torch = [
    "torch",
    "onnx",
]
dev = [
    "pytest",
    "mypy",
    "rich",
]
all = [
    "PyQt6",
    "torch",
    "onnx",
]

[project.scripts]
dm-gui = "dm_toolkit.gui.app:main"
dm-card-editor = "dm_toolkit.gui.editor.window:main"

[tool.setuptools.packages.find]
include = ["dm_toolkit*", "python*"]
